# warthog_manipulation

./: robotiq.rosinstall
docs/: README.md
warthog_dual_gen3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
warthog_dual_gen3_moveit_config/config/: ros_controllers.yaml  warthog.srdf
warthog_dual_gen3_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  warthog_dual_gen3_moveit_planning_execution.launch  warthog_moveit_controller_manager.launch.xml
warthog_dual_gen3_moveit_config/scripts/: customize_moveit.sh
warthog_dual_iiwa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
warthog_dual_ur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
warthog_gen3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
warthog_iiwa_description/: CMakeLists.txt  package.xml
warthog_iiwa_description/scripts/: setup_warthog_iiwa_14_envar  setup_warthog_iiwa_7_envar
warthog_iiwa_description/urdf/: warthog_dual_iiwa_14_description.urdf.xacro  warthog_iiwa_14_description.urdf.xacro  warthog_iiwa_7_description.urdf.xacro
warthog_iiwa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
warthog_kinova_bringup/: CMakeLists.txt  package.xml
warthog_kinova_description/: CMakeLists.txt  package.xml
warthog_manipulation/: CMakeLists.txt  package.xml
warthog_ur_bringup/: CMakeLists.txt  package.xml
warthog_ur_bringup/launch/: warthog_dual_ur_bringup.launch  warthog_dual_ur_modern_bringup.launch  warthog_dual_ur_official_bringup.launch  warthog_ur_bringup.launch  warthog_ur_official_bringup.launch
warthog_ur_description/: CMakeLists.txt  package.xml
warthog_ur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+125 files in other folders)
