<?xml version="1.0"?>
<package format="2">
  <name>warthog_iiwa_description</name>
  <version>0.0.0</version>
  <description>The warthog_iiwa_description package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>iiwa_description</exec_depend>
  <exec_depend>warthog_description</exec_depend>
</package>
