<?xml version="1.0"?>
<package format="2">
  <name>warthog_manipulation</name>
  <version>0.0.0</version>
  <description>The warthog_manipulation package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>warthog_ur_description</exec_depend>
  <exec_depend>warthog_dual_ur_moveit_config</exec_depend>
  <exec_depend>warthog_ur_bringup</exec_depend>
  <exec_depend>warthog_ur_moveit_config</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
